fixed spacing on lobby page

--- a/client/src/stylesheets/voting-page.css
+++ b/client/src/stylesheets/voting-page.css
@@ -139,7 +139,7 @@ body{
   }
   .player-vote-button{
     font-size: 1em;
-    margin-top: 4em;
+    margin-top: 5em;
   }
   .voting-instructions{
     margin-top: 3em;
