--- a/client/src/stylesheets/wingit-lobby.css
+++ b/client/src/stylesheets/wingit-lobby.css
@@ -224,11 +224,6 @@ button:hover{
 
 
 @media screen and (min-width: 700px){
-  .column{
-    width: 50%;
-    float: left;
-  }
-
   .title{
     font-size: 4em;
   }
@@ -242,11 +237,6 @@ button:hover{
     margin-top: 1em;
   }
   
-  .player-menu-card{
-    margin: 1em 28em 2em 4em;
-    font-size: 1em;
-  }
-
   .generated-room-code{
     font-size: 2em;
     padding-top: 1em;
@@ -254,11 +244,18 @@ button:hover{
   input{
     border: none;
   }
+  .name-field{
+    margin: 1em;
+  }
 }
 
 @media screen and (min-width: 1024px){
   body{
     font-size: 1em;
+  }
+  .column{
+    width: 50%;
+    float: left;
   }
   .wingit-main-container{
     height: 85.2em;
@@ -268,5 +265,9 @@ button:hover{
   }
   .generated-room-code{
     font-size: 2em;
+  }
+  .player-menu-card{
+    margin: 1em 28em 2em 4em;
+    font-size: 1em;
   }
 }
